--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <calc-app>Loading AppComponent content here ...</calc-app>
   </body>
 </html>
