--- a/src/index-jit.html
+++ b/src/index-jit.html
@@ -12,10 +12,15 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('main-jit.js').catch(function(err){ console.error(err); });
+    </script>
   </head>
 
   <body>
     <calc-app>Loading AppComponent content here ...</calc-app>
   </body>
-  <script src="build.js"></script>
 </html>
