--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="app/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="app/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">-->
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
