--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,25 @@
   </head>
 
   <body>
-    <calc-app>Loading AppComponent content here ...</calc-app>
+    <calc-app>
+      <div class="sk-circle">
+        <div class="sk-circle1 sk-child"></div>
+        <div class="sk-circle2 sk-child"></div>
+        <div class="sk-circle3 sk-child"></div>
+        <div class="sk-circle4 sk-child"></div>
+        <div class="sk-circle5 sk-child"></div>
+        <div class="sk-circle6 sk-child"></div>
+        <div class="sk-circle7 sk-child"></div>
+        <div class="sk-circle8 sk-child"></div>
+        <div class="sk-circle9 sk-child"></div>
+        <div class="sk-circle10 sk-child"></div>
+        <div class="sk-circle11 sk-child"></div>
+        <div class="sk-circle12 sk-child"></div>
+      </div>
+    </calc-app>
+    <footer >
+      <p class="align-middle">Designed & Coded by <a href="https://www.linkedin.com/in/nsikan-obong-essien-84197b80"/>Nsikan Essien</a></p>
+      <p class="align-middle">Loading Spinners courtesy of <a href="http://tobiasahlin.com/spinkit/"/>Tobias Ahlin</a></p>
+    </footer>
   </body>
 </html>
