Minor Edits to Index Footer + Latest Build Files

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
         <div class="sk-circle12 sk-child"></div>
       </div>
     </calc-app>
-    <footer >
-      <p class="align-middle">Designed & Coded by <a href="https://www.linkedin.com/in/nsikan-obong-essien-84197b80"/>Nsikan Essien</a></p>
-      <p class="align-middle">Loading Spinners courtesy of <a href="http://tobiasahlin.com/spinkit/"/>Tobias Ahlin</a></p>
+    <footer>
+      <p class="text-center"><small>Designed & coded by <a href="https://www.linkedin.com/in/nsikan-obong-essien-84197b80"/>Nsikan Essien</small></a></p>
+      <p class="text-center"><small>Loading Spinners courtesy of <a href="http://tobiasahlin.com/spinkit/"/>Tobias Ahlin</a></small></p>
     </footer>
   </body>
 </html>
